make max-width 0f container non divisible by 10 to fix a weird carousal bug where right button is not disabled on scroll all the way to right

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ img {
 }
 
 .container {
-    max-width: 1280px;
+    max-width: 1282px;
     width: calc(100vw - 40px);
     margin-inline: auto;
 }
